--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Info and Real-Time Data</title>
+    <title>My Personal Info</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1 data-testid="page-title">Personal Information</h1>
+        <h1>My Personal Info</h1>
         <div class="info">
-            <p><strong data-testid="name-label">Name:</strong> <span data-testid="name">Nworah Christian</span></p>
-            <p><strong data-testid="age-label">Age:</strong> <span data-testid="age">25</span></p>
+            <p data-testid="slackUserName"><strong>Slack Name:</strong> Nworah Christian</p>
+            <img src="./Screenshot_20210613-121418.png" alt="Nworah Christian" data-testid="slackDisplayImage">
+            <p data-testid="currentDayOfTheWeek"><strong>Current Day of the Week:</strong> Monday</p>
+            <p data-testid="currentUTCTime"><strong>Current UTC Time:</strong> 12:34:56 GMT</p>
+            <p data-testid="myTrack"><strong>Track:</strong> Frontend</p>
+            <p data-testid="githubURL"><strong>GitHub URL:</strong> <a
+                    href="https://github.com/krystein/zuri-task-01">https://github.com/krystein/zuri-task-01</a></p>
         </div>
-        <div class="real-time">
-            <p><strong data-testid="time-label">Current Time:</strong> <span data-testid="current-time"></span></p>
-        </div>
-        <div class="chart">
-            <canvas id="data-chart" data-testid="data-chart"></canvas>
-        </div>
-        <button id="change-data-button" data-testid="change-data-button">Change Data</button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./script.js"></script>
 </body>
 
