--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="info">
             <p data-testid="slackUserName"><strong>Slack Name:</strong> Nworah Christian</p>
             <img src="./Screenshot_20210613-121418.png" alt="Nworah Christian" data-testid="slackDisplayImage">
-            <p data-testid="currentDayOfTheWeek"><strong>Current Day of the Week:</strong> Monday</p>
-            <p data-testid="currentUTCTime"><strong>Current UTC Time:</strong> 12:34:56 GMT</p>
+            <p><strong>Current Day of the Week:</strong> <span data-testid="currentDayOfTheWeek"></span></p>
+            <p><strong>Current UTC Time:</strong> <span data-testid="currentUTCTime"></span></p>
             <p data-testid="myTrack"><strong>Track:</strong> Frontend</p>
             <p data-testid="githubURL"><strong>GitHub URL:</strong> <a
                     href="https://github.com/krystein/zuri-task-01">https://github.com/krystein/zuri-task-01</a></p>
